# OpenCV-RgbdOdometry

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
include/opencv_odometry/: depth_to_3d.hpp  linemod.hpp  rgbd.hpp
src/: main.cpp
src/opencv_odometry/: depth_to_3d.cpp  normal.cpp  odometry.cpp
tools/: associate_by_folder.py  download_dataset.py
